# base-django

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .coveragerc  .env.tpl  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  urls.py  wsgi.py  {% if cookiecutter.use_gitlab_ci == "y" %}.gitlab-ci.yml{% endif %}
{{ cookiecutter.project_slug }}/.github/workflows/: {% if cookiecutter.use_github_action == "y" %}release.yml{% endif %}
{{ cookiecutter.project_slug }}/templates/: base.html
{{ cookiecutter.project_slug }}/templates/includes/: css.html  js.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  {% if cookiecutter.use_celery == "y" %}celery_tasks.py{% endif %}
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/settings/: local.py  prod.py  test.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/settings/base/: __init__.py  apps.py  base.py  database.py  email.py  internationalization.py  logging.py  middleware.py  password.py  sentry.py  static.py  storage.py  swagger.py  {% if cookiecutter.use_celery == "y" %}celery.py{% endif%}  {% if cookiecutter.use_drf == "y" %}drf.py{% endif %}  {% if cookiecutter.use_s3 == "y" %}aws.py{% endif %}
